syntax = "proto3";

package ozon.dev.vldem.hw2.api;
option go_package = "gitlab.ozon.dev/vldem/homework1/pkg/api;api";

import "google/api/annotations.proto";

service Backend {
  rpc UserCreate(BackendUserCreateRequest) returns (BackendUserCreateResponse) {
  }

  rpc UserGet(BackendUserGetRequest) returns (BackendUserGetResponse) {
  }

  rpc UserList(BackendUserListRequest) returns (BackendUserListResponse) {
  }

  rpc UserUpdate(BackendUserUpdateRequest) returns (BackendUserUpdateResponse) {
  }

  rpc UserDelete(BackendUserDeleteRequest) returns (BackendUserDeleteResponse) {
  }

  rpc UsersAdd(stream BackendUsersAddRequest) returns (stream BackendUsersAddResponse) {
  }

}

// ---------------------------------------------------------------------------------------------------------------------
// UserCreate endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message BackendUserCreateRequest {
  string email    = 1;
  string name     = 2;
  string role     = 3;
  string password = 4;
}
message BackendUserCreateResponse {
  uint64 id    = 1;
}

// ---------------------------------------------------------------------------------------------------------------------
// UserList endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message BackendUserListRequest {
  optional uint64       rec_per_page = 1;
  optional uint64       page_num     = 2;
  optional SortingOrder order        = 3;

  message SortingOrder {
    string field      = 1;
    bool   descending = 2;
  }
}
message BackendUserListResponse {
  repeated User users = 1;

  message User {
    uint64 id    = 1;
    string email = 2;
    string name  = 3;
    string role  = 4;
  }
}

// ---------------------------------------------------------------------------------------------------------------------
// UserUpdate endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message BackendUserUpdateRequest {
  uint64 id          = 1;
  string email       = 2;
  string name        = 3;
  string role        = 4;
  string password    = 5;
  string oldpassword = 6;
}
message BackendUserUpdateResponse {}

// ---------------------------------------------------------------------------------------------------------------------
// UserDelete endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message BackendUserDeleteRequest {
  uint64 id       = 1;
  string password = 2;
}
message BackendUserDeleteResponse {}

// ---------------------------------------------------------------------------------------------------------------------
// UserGet endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message BackendUserGetRequest {
  uint64 id       = 1;
}
message BackendUserGetResponse {
  uint64 id    = 1;
  string email = 2;
  string name  = 3;
  string role  = 4;
}

// ---------------------------------------------------------------------------------------------------------------------
// UsersAdd endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message BackendUsersAddRequest {
  string email    = 1;
  string name     = 2;
  string role     = 3;
  string password = 4;
}
message BackendUsersAddResponse {
  uint64 id    = 1;
}